--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,31 @@
+:root {
+  --small-size: 1.3rem;
+}
+
+body {
+  background-color: rgb(22, 144, 214);
+}
+
 form {
   display: flex;
   flex-direction: column;
+  gap: var(--small-size);
+
+  font-size: var(--small-size);
+  color: white;
+  font-weight: bold;
+
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+form div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form input, form label {
+  font-family: inherit;
+  width: 290px;
+  height: 1.6rem;
 }
